CDCRM-901 : Gestion parallèle V1 et V2
